--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,1 +1,19 @@
-<p>banner works!</p>
+<header>
+  <div class="header-content">
+    <div class="header-content_logo">
+      <div>
+        <img src="assets/images/logo.png" alt="logo" />
+        <span> Tasty </span>
+      </div>
+    </div>
+    <div class="content-main">
+      <h1>Delicious meals to share with your family</h1>
+      <p>We made fresh and healthy homemade meals with different recipes</p>
+      <button>
+        <span>Signin</span>
+        <i class="fas fa-long-arrow-alt-right"></i>
+      </button>
+    </div>
+  </div>
+  <img class="header-img" src="assets/images/banner.png" alt="banner" />
+</header>
