--- a/src/app/product-list/product-list.component.css
+++ b/src/app/product-list/product-list.component.css
@@ -104,7 +104,7 @@ main {
   padding: 0.3rem 0.5rem;
   cursor: pointer;
   font-size: 0.6rem;
-  background-color: black;
+  background-color: brown;
   color: white;
 }
 
